update new file

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
    <div class="containter">
       <div class="row">
          <div class="col-12 col-md-16 p-4 text-center">
-            <h1 class="mb-5 px-3 fw-bolder display-5">A few words about this blog platform, Ghost, and howthis site was
-               made</h1>
+            <h1 class="mb-5 px-3 fw-bolder display-5">A few words about this blog platform, Ghost, and howthis site was made .</h1>
             <p class="px-3 mb-5 tittle">Why Ghost (& Figma) instead of Medium, WordPress or other options?</p>
             <div class="px-md-5">
                <div class="table-group-divider mb-5"></div>
